--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">Skills</a></li>
+							<!-- <li><a href="#first">Skills</a></li> -->
 							<li><a href="#second">Portfolio</a></li>
 							<li><a href="#cta">Contact Me</a></li>
 						</ul>
@@ -57,15 +57,18 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<!-- <section id="first" class="main special">
 								<header class="major">
 									<h2>Skills I can offer</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Code Skills</h3>
+										<p>Experienced with: Python <br />
+										Adept in: R and C <br />
+										Some experience: JavaScript, HTML, JSON, C++ and C# <br />
+										Experience reading: Fortran</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
@@ -83,16 +86,42 @@
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer> -->
-							</section>
+							</section> -->
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Portfolio</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>This is curated selection of some of my projects. <br />
+									My full portfolio can be found on my GitHub.</p>
 								</header>
-								<ul class="statistics">
+								<div class="row gtr-uniform">
+									<!-- Project 1 -->
+									<article class="col-4">
+										<a href="https://github.com/Rollyjasper/Tree_Idea_Planner" class="image fit thumb" target="_blank">
+											<img src="#" alt="#">
+										</a>
+											<h3 style="text-align:center;"><strong>Idea Planner</strong></h3>
+										<p style="text-align:center;">Python&bull; Obect Orientated&bull; TKinter&bull;</p>
+									</article>
+									<!-- Project 2 -->
+									<article class="col-4">
+										<a href="https://github.com/Rollyjasper/Charged_particle_simulations" class="image fit thumb" target="_blank">
+											<img src="#" alt="#">
+										</a>
+											<h3 style="text-align:center;"><strong>Charged Particle Simulation</strong></h3>
+										<p style="text-align:center;">Python&bull; Numpy&bull; Functional Paradigm&bull;</p>
+									</article>
+									<!-- Project 3 -->
+									<article class="col-4">
+										<a href="https://github.com/Rollyjasper/Worldbuilder" class="image fit thumb" target="_blank">
+											<img src="#" alt="#">
+										</a>
+											<h3 style="text-align:center;"><strong>World Building Database</strong></h3>
+										<p style="text-align:center;">Python&bull; JSON&bull; Obect Orientated&bull;</p>
+									</article>
+								</div>
+								<!-- <ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
 										<strong>5,120</strong> Etiam
@@ -113,8 +142,8 @@
 										<span class="icon fa-gem"></span>
 										<strong>1,024</strong> Nullam
 									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								</ul> -->
+								<!-- <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="https://github.com/Rollyjasper" class="button">Full Portfolio</a></li>
@@ -126,7 +155,7 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Contact Me</h2>
-									<p>Email: will@serby.me<br />
+									<p>Email: will@serby.me <br />
 									Phone: 07941 343316</p>
 								</header>
 								<!-- <footer class="major">
