--- a/index.html
+++ b/index.html
@@ -45,9 +45,16 @@
 										<header class="major">
 											<h2>Hi, I'm Will</h2>
 										</header>
-										<p>About me paragraph. Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>I'm a recent graduate from the University of leicester with a degree in physics. I leant opbject
+											orientated python as part of my A-Levels prior to university and both deeped and broardened my 
+											programming knowlage through the course of my degree by learning the python modules NumPy, SciPy 
+											and MatPlotLib to help with simulations, data analysis and data presentation; and by learning 
+											the languages R and C. Through my work with Ventx Ltd. I have learned Fortran as well as 
+											how to both adapt, rework and improve old code but also work closly with a client to help 
+											achive the desired result. Thanks to a summer internship with Forestreet Ltd., I have experiance testing 
+											both back-end and front-end code and, due to working with their data team, I have experiance with 
+											natural lanuage processing. 
+										</p>
 										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
@@ -81,11 +88,11 @@
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
-								<!-- <footer class="major">
+								  	<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
-								</footer> -->
+								</footer>
 							</section> -->
 
 						<!-- Second Section -->
@@ -97,28 +104,28 @@
 								</header>
 								<div class="row gtr-uniform">
 									<!-- Project 1 -->
-									<article class="col-4">
+									<article class="col-4 row-4">
 										<a href="https://github.com/Rollyjasper/Tree_Idea_Planner" class="image fit thumb" target="_blank">
-											<img src="#" alt="#">
+											<img src="images/thumbs/ideas.jpg" alt="Note pad and Pencils; Credit: @frederickjmedina on Unsplash">
 										</a>
 											<h3 style="text-align:center;"><strong>Idea Planner</strong></h3>
-										<p style="text-align:center;">Python&bull; Obect Orientated&bull; TKinter&bull;</p>
+										<p style="text-align:center;">Python &bull; Obect Orientated &bull; TKinter</p>
 									</article>
 									<!-- Project 2 -->
-									<article class="col-4">
+									<article class="col-4 row-4">
 										<a href="https://github.com/Rollyjasper/Charged_particle_simulations" class="image fit thumb" target="_blank">
-											<img src="#" alt="#">
+											<img src="images/thumbs/simulation.jpg" alt="Plot of a 3D surface; Credit: @_arods on Unsplash">
 										</a>
 											<h3 style="text-align:center;"><strong>Charged Particle Simulation</strong></h3>
-										<p style="text-align:center;">Python&bull; Numpy&bull; Functional Paradigm&bull;</p>
+										<p style="text-align:center;">Python &bull; Numpy &bull; Functional Paradigm</p>
 									</article>
 									<!-- Project 3 -->
-									<article class="col-4">
+									<article class="col-4 row-4">
 										<a href="https://github.com/Rollyjasper/Worldbuilder" class="image fit thumb" target="_blank">
-											<img src="#" alt="#">
+											<img src="images/thumbs/universes_cropped.jpg" alt="; Credit: @cmzw on Unsplash">
 										</a>
 											<h3 style="text-align:center;"><strong>World Building Database</strong></h3>
-										<p style="text-align:center;">Python&bull; JSON&bull; Obect Orientated&bull;</p>
+										<p style="text-align:center;">Python &bull; JSON &bull; Obect Orientated</p>
 									</article>
 								</div>
 								<!-- <ul class="statistics">
