spelling and format fixes

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 										<header class="major">
 											<h2>Hi, I'm Will</h2>
 										</header>
-										<p>I'm a recent graduate from the University of leicester with a degree in physics. I leant opbject
-											orientated python as part of my A-Levels prior to university and both deeped and broardened my 
-											programming knowlage through the course of my degree by learning the python modules NumPy, SciPy 
-											and MatPlotLib to help with simulations, data analysis and data presentation; and by learning 
-											the languages R and C. Through my work with Ventx Ltd. I have learned Fortran as well as 
-											how to both adapt, rework and improve old code but also work closly with a client to help 
+										<p align="justify">I'm a recent graduate from the University of Leicester with a degree in Physics with Astrophysics. 
+											I learnt object orientated Python as part of my A-Levels prior to university and both deepened and broadened my 
+											programming knowlege throughout the course of my degree by learning the Python modules NumPy, SciPy 
+											and MatPlotLib. These were used to help with simulations, data analysis and data presentation alongside my learning 
+											the languages R and C. Through my work with Ventx Ltd., I have gained experience with Fortran as well as learning 
+											how to both adapt, rework and improve old code. I also had the opportunity to work closly with a client to help 
 											achive the desired result. Thanks to a summer internship with Forestreet Ltd., I have experiance testing 
 											both back-end and front-end code and, due to working with their data team, I have experiance with 
 											natural lanuage processing. 
