Adding credit to headshot

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
 									</div>
-									<span class="image"><img src="images/Headshots/william-06.jpg" alt="Image of Me/Headshot" /></span>
+									<span class="image"><img src="images/Headshots/william-06.jpg" alt="Image of Me/Headshot; Credit:Anna Serby" /></span>
 								</div>
 							</section>
 
